ecmascript/parser/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_noImplicitAny_relativePath/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_noImplicitAny_relativePath/input.ts:5:9
  |
5 | { "name": "foo", "version": "1.2.3" }
  |         ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_noImplicitAny_relativePath/input.ts:5:3
  |
5 | { "name": "foo", "version": "1.2.3" }
  |   ^^^^^^

